rpc-agape/.deploy/k8s/app/4.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: cert-manager-global
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: ${APP_NAME}.${GODADDY_DOMAIN}
spec:
  tls:
    - hosts:
        - ${APP_NAME}.${GODADDY_DOMAIN}
      secretName: ${APP_NAME}-tls
  rules:
    - host: ${APP_NAME}.${GODADDY_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}-service
                port:
                  name: http
